# -

./: LABA-8.txt  Лаб.раб - 6  УП-2
Cmake/: CMakeLists.txt  main.cpp
Cmake/inc/: Func.hpp
Cmake/src/: Func.cpp
LABA-10/Cmake/: CMakeLists.txt  main.cpp
LABA-10/Cmake/inc/: S.hpp  T.hpp
LABA-10/Cmake/src/: S.cpp  T.cpp
